--- a/lab/lab12.html
+++ b/lab/lab12.html
@@ -55,3 +55,28 @@
         <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
+		
+		
+	<h2>Lab 12 - Path Planning and Execution</h2>
+	
+	<h3>Objective</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/point.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/pic.jpeg" alt=""width="400" height="400"/>
+	
+		
+	<h3>Code Implementation</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/1.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/2.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/3.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/4.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/5.jpeg" alt=""width="400" height="400"/>
+		
+		
+		
+		
+	<h3>Video demonstration and Discussion</h3>
+		
+		
+		
+		
+	
