--- a/lab/lab12.html
+++ b/lab/lab12.html
@@ -75,7 +75,9 @@
 		
 		
 	<h3>Video demonstration and Discussion</h3>
-		
+	<iframe width="560" height="315"  
+  	src="https://www.youtube.com/embed/"  
+  	frameborder="0" allowfullscreen></iframe>
 		
 		
 		
