--- a/lab/lab11.html
+++ b/lab/lab11.html
@@ -76,18 +76,18 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/4.jpeg" alt=""width="500" height="500"/>	
 		
 	<h3>(-3 ft ,-2 ft ,0 deg)</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/3-2-.jpeg" alt=""width="500" height="500"/>
 		
 	
 	<h3>(0 ft,3 ft, 0 deg)</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/2.jpeg" alt=""width="500" height="500"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/03.jpeg" alt=""width="500" height="500"/>	
 		
 		
 	<h3>(5 ft,-3 ft, 0 deg)</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/2.jpeg" alt=""width="500" height="500"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/5-3.jpeg" alt=""width="500" height="500"/>	
 		
 		
 	<h3>(5 ft,3 ft, 0 deg)</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/2.jpeg" alt=""width="500" height="500"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/53.jpeg" alt=""width="500" height="500"/>	
 		
 		
