--- a/lab/lab11.html
+++ b/lab/lab11.html
@@ -77,7 +77,7 @@
 		
 	<h3>(-3 ft ,-2 ft ,0 deg)</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/3-2-.jpeg" alt=""width="500" height="500"/>
-		
+		 
 	
 	<h3>(0 ft,3 ft, 0 deg)</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/03.jpeg" alt=""width="500" height="500"/>	
@@ -89,5 +89,17 @@
 		
 	<h3>(5 ft,3 ft, 0 deg)</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab11/53.jpeg" alt=""width="500" height="500"/>	
+		
+	<h3>Discussion</h3>
+		<p>Overall, I think the result I got is pretty good. The accuracy rate is 50% in my result. 
+		The results for points (-3,-2) and (5,-3) are accurate. But the points (5,3) and (0,3) have one cell error. 
+		And both of them have one feet difference along the vertical axis. I think the reasons are the sensor noise and the rotational drifting.
+		Also, there are less obstacle around these points with shorter distance. 
+		When the ToF sensor trying to measure the longer distance, the accuracy will decrease. 
+		At the mean time, when I run the robot with my code provided above, sometimes it will appear some drifting due to the friction force. 
+		That is also a possible factor to cause the inaccuracy of the localization. </p>
+		
+		
+		
 		
 		
