--- a/lab/lab12.html
+++ b/lab/lab12.html
@@ -65,20 +65,33 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/pic.jpeg" alt=""width="400" height="400"/>
 		<p>The method I use is applying the PID control directly without localization,
 		because localization requires the rotate 360 to check the localization when the robot move to the new place, which is very time-cosuming.
-		And also, as the result shown in the lab 11, the localization is not very accurate. 
+		And also, as the result shown in the lab 11, the localization is not exactly accurate. 
+		Because of the speed of two motors are not exactly same, that will cause even more error. 
 		However, the most importance factor to choose this method is that the PID implementation is easier.</p>
 		
 	<h3>Code Implementation</h3>
-		<p>The implement the PID control, I 
+		<p>To implement the PID control, I create a while loop in the CASE session. 
+		I first calculate the error at the starting point, and then use the while loop to determine whether the error result is acceptable.
+		If not, the code will go into the while loop to execute the PID control command again until the error is located within the acceptable range.
+		This code is very similar with the code in lab 6 for PID control. The only difference here is that I have to create the loop manually.
+		The code is attached below. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/1.jpeg" alt=""width="400" height="400"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/2.jpeg" alt=""width="400" height="400"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/3.jpeg" alt=""width="400" height="400"/>
 		<p>The code below are the screenshots for the robot turning. 
-		I set the clockwise direction as positive, so, I name it as turn right. 
+		I set the clockwise direction as positive, so, I name it as turn right. The logic is very similar as the CASE for "MOVE_FORWARD". 
+		I have to calculate the setpoint based on the current position of the robot.
+		The turning degree is set relative to the IMU position. 
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/4.jpeg" alt=""width="400" height="400"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/5.jpeg" alt=""width="400" height="400"/>
+		<p>Note, my code above is inspired by Linda Li from 2022. </p>
 		<p>The picture below shows the python code. The distance shown in every "move_forward" is measured in the real map.
-		I run the robot in the lab classroom and get the most appropriate distance to increase the accuracy. </p>
+		I run the robot in the lab classroom and get the most appropriate distance to increase the accuracy. 
+		As you can see, some degrees are 270, which means the robot is turning left at 90 degrees. 
+		It is because I didn't create a separte code for the robot to turn left. 
+		In the real life testing, the error caused by the rotational drifting can be ignored. 
+		The biggest factor for the inaccurate of the robot moving is the different of the motor speed. 
+		My robot always drift to the left even though I increase the speed of the left motor. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab12/command.jpeg" alt=""width="400" height="400"/>	
 		
 		
